@@ -35,38 +35,6 @@ extern const int all_datasets;
 
 std::vector<DataAndModel*> get_datasets_from_indata();
 
-/// a part of command grammar
-struct IntRangeGrammar : public grammar<IntRangeGrammar>
-{
-    template <typename ScannerT>
-    struct definition
-    {
-      definition(IntRangeGrammar const& /*self*/)
-      {
-          static const int zero = 0;
-          static const int int_max = INT_MAX;
-
-          t
-              = '[' >> (int_p[assign_a(tmp_int)]
-                       | eps_p[assign_a(tmp_int, zero)]
-                       )
-                    >> (':'
-                        >> (int_p[assign_a(tmp_int2)]
-                           | eps_p[assign_a(tmp_int2, int_max)]
-                           )
-                        >> ']'
-                       | ch_p(']')[assign_a(tmp_int2, tmp_int)]
-                              [increment_a(tmp_int2)]//see assign_a error above
-                       )
-              ;
-      }
-      rule<ScannerT> t;
-      rule<ScannerT> const& start() const { return t; }
-    };
-};
-
-extern IntRangeGrammar  IntRangeG;
-
 struct CompactStrGrammar : public grammar<CompactStrGrammar>
 {
     template <typename ScannerT>
